# sourcegraph

./: .tool-versions  BUILD.bazel  WORKSPACE  deps.bzl  package.json  pnpm-lock.yaml  sg.config.yaml  shell.nix
.aspect/workflows/: config.yaml
client/branded/: BUILD.bazel
client/client-api/: BUILD.bazel
client/shared/dev/: BUILD.bazel  buildCodeIntelExtensions.js  build_code_intel_extensions.bzl  runMochaTestsWithPercy.js
client/web/: BUILD.bazel  package.json
client/web-sveltekit/: package.json
client/web-sveltekit/src/lib/: Icon.svelte  Popover.svelte  TreeNode.svelte
client/web/dev/: BUILD.bazel
client/web/src/integration/: context.ts  sign-in.test.ts
client/web/src/nav/: GlobalNavbar.tsx
cmd/frontend/graphqlbackend/: git_commits.go  git_tree_entry.go
cmd/frontend/internal/codycontext/: context.go
cmd/gitserver/internal/: server_grpc_logger.go  server_test.go
cmd/gitserver/internal/git/: BUILD.bazel  iface.go  mock.go  observability.go
cmd/gitserver/internal/janitor/: BUILD.bazel  objects.go  routine.go
cmd/gitserver/shared/: BUILD.bazel  config.go  config_test.go  shared.go
cmd/searcher/protocol/: BUILD.bazel
dev/build-tracker-msp/: main.go
dev/ci/: trigger-build-metrics-pipeline.sh
dev/ci/internal/ci/: pipeline.go  (+1 more)
dev/executionlogs/: BUILD.bazel  main.go
dev/executionlogs/proto/: BUILD.bazel  execution_graph.pb.go  execution_graph.proto  spawn.pb.go  spawn.proto
dev/managedservicesplatform/clouddeploy/: BUILD.bazel
dev/nix/: shell-hook.sh
dev/sg/msp/: BUILD.bazel
dev/update-embeddings-list/: package.json
docker-images/codeinsights-db/: BUILD.bazel
docker-images/codeintel-db/: BUILD.bazel
internal/appliance/: BUILD.bazel  kubernetes_test.go  reconcile.go
internal/cmd/tracking-issue/: Dockerfile
internal/codeintel/policies/: matcher.go  matcher_common_test.go
internal/codeintel/resolvers/: codenav.go
internal/completions/tokenizer/: BUILD.bazel  claude.go  tokenizer.go
internal/completions/tokenusage/: BUILD.bazel  tokenusage.go  tokenusage_test.go
internal/gitserver/: commands.go  commands_test.go  mock.go
internal/gitserver/gitdomain/: date.go
internal/gitserver/v1/: gitserver.pb.go  gitserver.proto  gitserver_grpc.pb.go
internal/insights/gitserver/: client.go
internal/own/background/: recent_contributors.go
internal/rcache/: rcache.go
internal/search/: BUILD.bazel  types.go
internal/search/codycontext/: job.go  job_test.go
internal/search/repos/: BUILD.bazel  repos.go
internal/search/searcher/: BUILD.bazel
internal/session/: BUILD.bazel
internal/updatecheck/: BUILD.bazel  client.go  handler.go  handler_test.go
schema/: settings.schema.json
wolfi-images/: batcheshelper.lock.json  blobstore.lock.json  bundled-executor.lock.json  caddy.lock.json  cadvisor.lock.json  cloud-mi2.lock.json  executor-kubernetes.lock.json  executor.lock.json  gitserver.lock.json  jaeger-agent.lock.json  jaeger-all-in-one.lock.json  node-exporter.lock.json  opentelemetry-collector.lock.json  postgres-exporter.lock.json  postgresql-12-codeinsights.lock.json  postgresql-12.lock.json  prometheus.lock.json  redis-exporter.lock.json  redis.lock.json  repo-updater.lock.json  search-indexer.lock.json  searcher.lock.json  server.lock.json  sourcegraph-base.lock.json  sourcegraph-dev.lock.json  sourcegraph-template.lock.json  symbols.lock.json  syntax-highlighter.lock.json
(+45 files in other folders)
