load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "protos",
    srcs = [
        "execution_graph.proto",
        "spawn.proto",
    ],
    visibility = ["//visibility:private"],
    deps = ["@com_google_protobuf//:duration_proto"],
)

go_proto_library(
    name = "go_proto",
    importpath = "github.com/sourcegraph/sourcegraph/dev/executionlogs/proto",
    proto = ":protos",
    visibility = ["//visibility:public"],
)

go_library(
    name = "proto",
    embed = [":go_proto"],
    importpath = "github.com/sourcegraph/sourcegraph/dev/executionlogs/proto",
    visibility = ["//dev/executionlogs:__pkg__"],
)
