load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "tokenusage",
    srcs = ["tokenusage.go"],
    importpath = "github.com/sourcegraph/sourcegraph/internal/completions/tokenusage",
    visibility = [
        "//cmd/cody-gateway:__subpackages__",
        "//internal/completions/client/anthropic:__pkg__",
        "//internal/completions/client/azureopenai:__pkg__",
        "//internal/completions/client/openai:__pkg__",
        "//internal/updatecheck:__pkg__",
    ],
    deps = [
        "//internal/completions/tokenizer",
        "//internal/rcache",
    ],
)
