load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "janitor",
    srcs = [
        "cleanup.go",
        "objects.go",
        "repair.go",
        "repostats.go",
        "routine.go",
    ],
    importpath = "github.com/sourcegraph/sourcegraph/cmd/gitserver/internal/janitor",
    visibility = ["//cmd/gitserver:__subpackages__"],
    deps = [
        "//cmd/gitserver/internal/common",
        "//cmd/gitserver/internal/executil",
        "//cmd/gitserver/internal/git",
        "//cmd/gitserver/internal/git/gitcli",
        "//cmd/gitserver/internal/gitserverfs",
        "//cmd/gitserver/internal/janitor/stats",
        "//internal/actor",
        "//internal/api",
        "//internal/conf",
        "//internal/database",
        "//internal/diskusage",
        "//internal/dotcom",
        "//internal/env",
        "//internal/errcode",
        "//internal/gitserver/connection",
        "//internal/goroutine",
        "//internal/hostname",
        "//internal/lazyregexp",
        "//internal/types",
        "//internal/wrexec",
        "//lib/errors",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prometheus_client_golang//prometheus/promauto",
        "@com_github_sourcegraph_log//:log",
    ],
)
